force-app/main/default/objects/DUO_Authentication__c.object
<CustomObject>
    <description>[inContact API] - Experience Center</description>
    <fields>
        <fullName>ANI__c</fullName>
        <description>ANI value from InContact (Phone Number)</description>
        <externalId>true</externalId>
        <label>ANI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authentication_Type__c</fullName>
        <description>Type of Authentication the Contact completed</description>
        <label>Authentication Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Push</fullName>
                    <default>true</default>
                    <label>Push</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Object_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Call Object Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contact record related to the DUO Authentication</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DUO Authentication</relationshipLabel>
        <relationshipName>DUO_Authentication</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Determines whether the contact has authenticated or not authenticated with DUO Authentication</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authenticated</fullName>
                </value>
                <value>
                    <fullName>Not Authenticated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_of_Authentication__c</fullName>
        <description>Shows the date and time at which the authentication occurred</description>
        <label>Time of Authentication</label>
        <type>DateTime</type>
    </fields>
    <label>DUO Authentication</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DUO-{0000000}</displayFormat>
        <label>DUO Authentication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DUO Authentication</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>